Fixed extra space from circles animation.

--- a/src/app/circles-gradient/circles-gradient.component.css
+++ b/src/app/circles-gradient/circles-gradient.component.css
@@ -10,13 +10,32 @@ body {
     overflow-x: hidden;
 }
 
-:host {
+/* :host {
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
     width: 100vw;
-}
+} */
+
+/* Host as a full-viewport or page overlay */
+:host {
+    position: absolute;     /* or absolute if you prefer it to scroll with content */
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;         /* behind everything else */
+    pointer-events: none; /* so you can’t accidentally click the circles */
+  }
+  
+  /* Remove any top margin on the container so it does not push content */
+  .containerCircles {
+    /* margin-top: 0 !important; */
+    position: relative; /* or keep it as-is if you want each circle absolutely within. */
+    scale: 120%;        /* if you still want to scale it */
+  }
+  
 
 .circle {
     position: absolute;
@@ -35,14 +54,14 @@ body {
 .containerCircles {
     /* margin-top: 1500px; */
     /* margin-top: 200vh; */
-    scale: 120%;
+    /* scale: 120%; */
 }
 
 @media only screen and (min-width: 650px) {
     .containerCircles {
         /* margin-top: 200vh; */
         /* margin-top: 1200px; */
-        margin-top: 200px;
+        margin-top: 600px;
     }
 }
 
@@ -50,6 +69,6 @@ body {
     .containerCircles {
         /* margin-top: 350vh; */
         /* margin-top: 1550px; */
-        margin-top: 100px;
+        margin-top: 700px;
     }
 }
