--- a/src/app/homepage/homepage.component.css
+++ b/src/app/homepage/homepage.component.css
@@ -72,10 +72,12 @@ html {
 }
 
 .contentFullSection {
+  position: relative;
   backdrop-filter: blur(20px);
   box-shadow: rgb(0, 0, 0, 0.5) 0px 0px 10px;
   margin: 20px;
   border-radius: 20px;
+  z-index: 1000;
 }
 
 .contentFullBody {
@@ -90,7 +92,7 @@ html {
 }
 
 .stupidCircles {
-  z-index: 0;
+  z-index: -1;
 }
 
 .customGridList {
@@ -214,4 +216,8 @@ div {
   /* opacity: 0.5; */
   box-shadow: inset 0 0 10px #00000080;
   border-radius: 100px;
+}
+
+.mainBody {
+  z-index: 100;
 }
